sassi/tests/compile_fail/watermark_delta_sync_bool.stderr
error[E0277]: the trait bound `bool: MonotonicWatermark` is not satisfied
  --> tests/compile_fail/watermark_delta_sync_bool.rs:34:22
   |
34 |     type Watermark = bool;
   |                      ^^^^ the trait `MonotonicWatermark` is not implemented for `bool`
   |
   = help: the following other types implement trait `MonotonicWatermark`:
             (A, B)
             (A, B, C)
             (A, B, C, D)
             SystemTime
             i128
             i16
             i32
             i64
           and $N others
note: required by a bound in `sassi::DeltaSyncCacheable::Watermark`
  --> src/watermark.rs
   |
   |     type Watermark: MonotonicWatermark;
   |                     ^^^^^^^^^^^^^^^^^^ required by this bound in `DeltaSyncCacheable::Watermark`
